# custom_corryvreckan_modules

./: README.md
modified_and_custom_modules/ClusterLoaderVMM3a/: CMakeLists.txt  ClusterLoaderVMM3a.cpp  ClusterLoaderVMM3a.h  ClusterLoaderVMM3a_clusters.cpp  ClusterLoaderVMM3a_clusters.h  README.md
modified_and_custom_modules/ClusteringGeneric/: CMakeLists.txt  ClusteringGeneric.cpp  ClusteringGeneric.cpp.bkp  ClusteringGeneric.cpp.working  ClusteringGeneric.h  ClusteringGeneric.h.bkp  ClusteringGeneric.h.working  ClusteringGeneric_test.cpp  README.md
modified_and_custom_modules/EventLoaderAPV25/: .EventLoaderAPV25.cpp.swp  CMakeLists.txt  EventLoaderAPV25.cpp  EventLoaderAPV25.h  EventLoaderAPV25_landau.cpp  README.md
modified_and_custom_modules/EventLoaderVMM3a/: CMakeLists.txt  EventLoaderVMM3a.cpp  EventLoaderVMM3a.h  EventLoaderVMM3a_test.cpp  README.md
modified_and_custom_modules/Tracking4D/: CMakeLists.txt  README.md  Tracking4D.cpp  Tracking4D.h
modified_and_custom_modules/TreeWriter/: .TreeWriter.cpp.swp  CMakeLists.txt  README.md  TreeWriter.cpp  TreeWriter.h
modified_and_custom_modules/VMM3aStripDataPreserver/: CMakeLists.txt  README.md  VMM3aStripDataPreserver.cpp  VMM3aStripDataPreserver.h
tests/APV25/: APV25.conf  PICOSEC_XYpixels_alignedTrackChi2.geo  PICOSEC_alignedTrackChi2.geo  Run420.000.Tree.root
tests/VMM3a/: VMM3a_cluster_test.conf  run0079_alignedTrackChi2_withDUT.geo
